--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ body{
 
 
 .bg{
-    background-image: url("css/food.png");
+    background-image: url("food.png");
     background-repeat: no-repeat;
     background-position: center;
     z-index: -4;
